baml_language/crates/baml_tests/snapshots/diagnostic_errors/backtick_interp_type_errors/baml_tests__diagnostic_errors__backtick_interp_type_errors__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.bad_member_chain_interp() -> string  [expr] {
  {  } `...`
}
function user.bad_member_in_for_segment(xs: int[]) -> string  [expr] {
  {  } `...`
}
function user.bad_member_in_if_segment(show: bool) -> string  [expr] {
  {  } `...`
}
function user.bad_member_interp() -> string  [expr] {
  {  } `...`
}
function user.bad_method_interp() -> string  [expr] {
  {  } `...`
}
function user.bad_operator_interp() -> string  [expr] {
  {  } `...`
}
function user.unresolved_name_interp() -> string  [expr] {
  {  } `...`
}
