baml_language/crates/baml_tests/snapshots/diagnostic_errors/backtick_interp_type_errors/baml_tests__diagnostic_errors__backtick_interp_type_errors__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.bad_member_interp() -> string throws never {
  { : string
    `...` : string
  }
  !! 583..586: type `int[]` has no member `len`
}
function user.bad_member_chain_interp() -> string throws never {
  { : string
    `...` : string
  }
  !! 758..761: type `int[]` has no member `len`
}
function user.bad_operator_interp() -> string throws never {
  { : string
    `...` : string
  }
  !! 884..891: operator `+` cannot be applied to `1` and `"x"`
}
function user.bad_method_interp() -> string throws never {
  { : string
    `...` : string
  }
  !! 995..1006: type `"abc"` has no member `nonexistent`
}
function user.unresolved_name_interp() -> string throws never {
  { : string
    `...` : string
  }
  !! 1282..1295: unresolved name: undefined_var
}
function user.bad_member_in_for_segment(xs: int[]) -> string throws never {
  { : string
    `...` : string
  }
  !! 1507..1514: type `int` has no member `bogus`
  !! 1507..1514: type `int` has no member `bogus`
}
function user.bad_member_in_if_segment(show: bool) -> string throws never {
  { : string | ""
    `...` : string | ""
  }
  !! 1614..1621: type `"abc"` has no member `missing`
}
