baml_language/crates/baml_tests/snapshots/diagnostic_errors/backtick_interp_type_errors/baml_tests__diagnostic_errors__backtick_interp_type_errors__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0007

  × type `int[]` has no member `len`
    ╭─[main.baml:10:24]
 10 │     `result: ${[1,2,3].len()}`
    ·                        ─┬─
    ·                         ╰── type `int[]` has no member `len`
    ╰────

  [type] E0007

  × type `int[]` has no member `len`
    ╭─[main.baml:16:18]
 16 │     `x ${[1,2,3].len().to_string()}`
    ·                  ─┬─
    ·                   ╰── type `int[]` has no member `len`
    ╰────

  [type] E0004

  × operator `+` cannot be applied to `1` and `"x"`
    ╭─[main.baml:21:13]
 21 │     `sum: ${1 + "x"}`
    ·             ───┬───
    ·                ╰── operator `+` cannot be applied to `1` and `"x"`
    ╰────

  [type] E0007

  × type `"abc"` has no member `nonexistent`
    ╭─[main.baml:26:17]
 26 │     `v: ${"abc".nonexistent()}`
    ·                 ─────┬─────
    ·                      ╰── type `"abc"` has no member `nonexistent`
    ╰────

  [type] E0003

  × unresolved name: undefined_var
    ╭─[main.baml:33:11]
 33 │     `v: ${undefined_var}`
    ·           ──────┬──────
    ·                 ╰── unresolved name: undefined_var
    ╰────

  [type] E0007

  × type `int` has no member `bogus`
    ╭─[main.baml:39:28]
 39 │     `${for (let x in xs)}${x.bogus()}${endfor}`
    ·                            ───┬───
    ·                               ╰── type `int` has no member `bogus`
    ╰────

  [type] E0007

  × type `"abc"` has no member `missing`
    ╭─[main.baml:43:26]
 43 │     `${if (show)}${"abc".missing()}${endif}`
    ·                          ───┬───
    ·                             ╰── type `"abc"` has no member `missing`
    ╰────
